	PR debug/44901 	* vec.h (VEC_block_remove): Fix comment. 	* tree-ssa-live.c (remove_unused_locals): Don't use 	VEC_unordered_remove on local_decls, instead replace a single 	vector element in each iteration if at least one element had 	to be removed and VEC_truncate at the end. 	* omp-low.c (expand_omp_taskreg): Likewise.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@162126 138bc75d-0d04-0410-961f-82ee72b054a4